.htaccess: redirect attempts to read .git
Just because it doesn't look nice. There's nothing sensitive there.

--- a/.htaccess
+++ b/.htaccess
@@ -15,3 +15,4 @@ ExpiresByType application/x-bzip2 "access plus 1 year"
 ExpiresByType application/zip "access plus 1 year"
 ExpiresByType application/x-tar "access plus 1 year"
 </ifmodule>
+RedirectMatch "^/.git" https://daniel.haxx.se/
