.htaccess: redirect from myopensource

--- a/.htaccess
+++ b/.htaccess
@@ -17,3 +17,4 @@ ExpiresByType application/x-tar "access plus 1 year"
 </ifmodule>
 RedirectMatch "^/.git" https://daniel.haxx.se/
 RedirectPermanent /http3-explained https://http3-explained.haxx.se
+RedirectPermanent /myopensource.html https://daniel.haxx.se/opensource.html
