everything-curl: include size and time stamps
Also change the layout to a table

--- a/everything-curl/Makefile
+++ b/everything-curl/Makefile
@@ -5,8 +5,11 @@ ACTION=@echo fixing $@; \
 
 all: index.html
 
-index.html: index.t $(MAINPARTS)
+index.html: index.t data.t $(MAINPARTS)
 	$(ACTION)
+
+data.t: everything-curl.pdf everything-curl.epub everything-curl.zip data.pl
+	perl ./data.pl everything-curl.pdf everything-curl.epub everything-curl.zip > data.t
 
 clean:
 	find . -name "*~" -exec rm {} \;
